@@ -32,9 +32,7 @@ import java.util.List;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicLong;
 import jdk.httpclient.test.lib.common.HttpServerAdapters;
-import jdk.httpclient.test.lib.http2.Http2TestServer;
 
-import com.sun.net.httpserver.HttpServer;
 import com.sun.net.httpserver.HttpsConfigurator;
 import com.sun.net.httpserver.HttpsServer;
 import org.testng.annotations.AfterClass;
@@ -55,6 +53,7 @@ import static java.net.http.HttpClient.Version.HTTP_2;
  * @build jdk.httpclient.test.lib.common.HttpServerAdapters jdk.test.lib.net.SimpleSSLContext
  *        DigestEchoServer
  * @run testng/othervm -Dtest.requiresHost=true
+ * -Djdk.tracePinnedThreads=full
  * -Djdk.httpclient.HttpClient.log=headers
  * -Djdk.internal.httpclient.debug=false
  * AuthFilterCacheTest
@@ -90,7 +89,9 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
     ProxySelector proxySelector;
     MyAuthenticator auth;
     HttpClient client;
-    ExecutorService executor = Executors.newCachedThreadPool();
+    ExecutorService serverExecutor = Executors.newCachedThreadPool();
+    ExecutorService virtualExecutor = Executors.newThreadPerTaskExecutor(Thread.ofVirtual()
+            .name("HttpClient-Worker", 0).factory());
 
     @DataProvider(name = "uris")
     Object[][] testURIs() {
@@ -108,6 +109,7 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
     public HttpClient newHttpClient(ProxySelector ps, Authenticator auth) {
         HttpClient.Builder builder = HttpClient
                 .newBuilder()
+                .executor(virtualExecutor)
                 .sslContext(context)
                 .authenticator(auth)
                 .proxy(ps);
@@ -122,7 +124,7 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
             auth = new MyAuthenticator();
 
             // HTTP/1.1
-            http1Server = HttpTestServer.create(HTTP_1_1, null, executor);
+            http1Server = HttpTestServer.create(HTTP_1_1, null, serverExecutor);
             http1Server.addHandler(new TestHandler(), "/AuthFilterCacheTest/http1/");
             http1Server.start();
             http1URI = new URI("http://" + http1Server.serverAuthority()
@@ -130,7 +132,7 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
 
             // HTTPS/1.1
             HttpsServer sserver1 = HttpsServer.create(sa, 100);
-            sserver1.setExecutor(executor);
+            sserver1.setExecutor(serverExecutor);
             sserver1.setHttpsConfigurator(new HttpsConfigurator(context));
             https1Server = HttpTestServer.of(sserver1);
             https1Server.addHandler(new TestHandler(), "/AuthFilterCacheTest/https1/");
@@ -175,7 +177,8 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
         https1Server = stop(https1Server, HttpTestServer::stop);
         http2Server = stop(http2Server, HttpTestServer::stop);
         https2Server = stop(https2Server, HttpTestServer::stop);
-        client = null;
+        client.close();
+        virtualExecutor.close();
 
         System.out.println("Teardown: done");
     }
@@ -267,7 +270,7 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
         CompletableFuture.allOf(cfs.toArray(new CompletableFuture[0])).join();
     }
 
-    static class MyAuthenticator extends Authenticator {
+    static final class MyAuthenticator extends Authenticator {
         private int count = 0;
 
         MyAuthenticator() {
@@ -275,9 +278,29 @@ public class AuthFilterCacheTest implements HttpServerAdapters {
         }
 
         public PasswordAuthentication getPasswordAuthentication() {
-            System.out.println("Authenticator called: " + ++count);
             return (new PasswordAuthentication("user" + count,
                     ("passwordNotCheckedAnyway" + count).toCharArray()));
+        }
+
+        @Override
+        public PasswordAuthentication requestPasswordAuthenticationInstance(String host,
+                                                                            InetAddress addr,
+                                                                            int port,
+                                                                            String protocol,
+                                                                            String prompt,
+                                                                            String scheme,
+                                                                            URL url,
+                                                                            RequestorType reqType) {
+            PasswordAuthentication passwordAuthentication;
+            int count;
+            synchronized (this) {
+                count = ++this.count;
+                passwordAuthentication = super.requestPasswordAuthenticationInstance(
+                        host, addr, port, protocol, prompt, scheme, url, reqType);
+            }
+            // log outside of synchronized block
+            System.out.println("Authenticator called: " + count);
+            return passwordAuthentication;
         }
 
         public int getCount() {
